fix header brand on mobile pt 2

--- a/blocks/src/blocks/header-brand/style.scss
+++ b/blocks/src/blocks/header-brand/style.scss
@@ -48,7 +48,6 @@
 
 		.logo-wrapper {
 			flex-direction: row;
-			gap: var(--wp--preset--spacing--20);
 		}
 
 		.caes-hub-header-brand-logo {
